--- a/style.css
+++ b/style.css
@@ -481,6 +481,10 @@ footer h1 {
     width: 100%;
     margin-bottom: 200px;
   }
+  .nav-link {
+    display: block;
+    margin: 40px 0px;
+  }
 }
 
 @media only screen and (max-width: 996px) {
@@ -488,6 +492,12 @@ footer h1 {
     width: 500px;
     margin: auto;
     margin-bottom: 40px;
+  }
+  #txt {
+    margin: 80px 0px;
+  }
+  #bar {
+    margin-bottom: 60px;
   }
 }
 
