--- a/style.scss
+++ b/style.scss
@@ -162,20 +162,16 @@ section {
   .head {
     text-align: center;
   }
-  .icons {
+  .skills-section {
     background-color: #ff4a57;
-    min-height: 40vh;
+    min-height: 60vh;
     color: #23263a;
     padding: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    i {
-      font-size: 10rem;
-      flex: 1 1 20rem;
-      text-align: center;
-    }
+    
   }
 }
 .about-me {
