--- a/style.scss
+++ b/style.scss
@@ -165,6 +165,8 @@ section {
   .skills-section {
     background-color: #ff4a57;
     min-height: 60vh;
+    width: 600px;
+    margin: auto;
     color: #23263a;
     padding: 2rem;
     display: flex;
